--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@fastify/cors": "9.0.1",
     "@paralleldrive/cuid2": "2.2.2",
     "dayjs": "1.11.12",
     "drizzle-orm": "0.33.0",
