--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "@fastify/cors": "10.0.1",
+    "@fastify/swagger": "9.1.0",
+    "@fastify/swagger-ui": "5.0.1",
+    "@paralleldrive/cuid2": "2.2.2",
+    "dayjs": "1.11.12",
+    "drizzle-orm": "0.33.0",
+    "fastify": "5.0.0",
+    "fastify-type-provider-zod": "4.0.2",
+    "postgres": "3.4.4",
+    "zod": "3.23.8"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@types/node": "22.2.0",
     "drizzle-kit": "0.24.0",
     "tsx": "4.17.0",
     "typescript": "5.5.4"
-  },
-  "dependencies": {
-    "@fastify/cors": "9.0.1",
-    "@paralleldrive/cuid2": "2.2.2",
-    "dayjs": "1.11.12",
-    "drizzle-orm": "0.33.0",
-    "fastify": "4.28.1",
-    "fastify-type-provider-zod": "2.0.0",
-    "postgres": "3.4.4",
-    "zod": "3.23.8"
   }
 }
