tests: setup test structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "source.organizeImports.biome": "explicit"
   },
   "cSpell.words": [
-    "openapi"
+    "openapi",
+    "paralleldrive"
   ]
 }
