--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "_version": "20.1.0",
-
+  "$schema": "https://json.schemastore.org/tsconfig.json",
   "compilerOptions": {
-    "lib": ["es2023"],
-    "module": "node16",
+    "lib": [
+      "es2023"
+    ],
+    "module": "ESNext",
     "target": "es2022",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "Bundler",
+    "jsx": "react-jsx",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
