--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "tsx watch --env-file .env src/http/server.ts",
     "seed": "tsx --env-file .env src/db/seed.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "pretest": "npm run db:migrate:test",
     "pretest:watch": "npm run db:migrate:test",
     "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
@@ -18,6 +20,7 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "10.0.1",
+    "@fastify/jwt": "9.0.1",
     "@fastify/swagger": "9.1.0",
     "@fastify/swagger-ui": "5.0.1",
     "@paralleldrive/cuid2": "2.2.2",
@@ -25,6 +28,7 @@
     "drizzle-orm": "0.33.0",
     "fastify": "5.0.0",
     "fastify-type-provider-zod": "4.0.2",
+    "jose": "5.9.3",
     "postgres": "3.4.4",
     "zod": "3.23.8"
   },
