--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "source.organizeImports.biome": "explicit"
   },
   "cSpell.words": [
+    "gamification",
     "jose",
     "openapi",
     "paralleldrive"
