--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       postgres:
-        image: bitnami/postgresql:13.16.0
+        image: postgres:13
         ports:
           - 5432:5432
         env:
