--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@fastify/cors": "9.0.1",
+    "@fastify/cors": "^10.0.1",
     "@paralleldrive/cuid2": "2.2.2",
     "dayjs": "1.11.12",
-    "drizzle-orm": "0.33.0",
-    "fastify": "4.28.1",
-    "fastify-type-provider-zod": "2.0.0",
+    "drizzle-orm": "^0.34.1",
+    "fastify": "^5.0.0",
+    "fastify-type-provider-zod": "^4.0.2",
     "postgres": "3.4.4",
     "zod": "3.23.8"
   }
