--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/swagger": "^9.1.0",
+    "@fastify/swagger-ui": "^5.0.1",
     "@paralleldrive/cuid2": "2.2.2",
     "dayjs": "1.11.12",
     "drizzle-orm": "^0.34.1",
