--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@types/node": "22.2.0",
-    "drizzle-kit": "0.24.0",
+    "drizzle-kit": "^0.25.0",
     "tsx": "4.17.0",
     "typescript": "5.5.4"
   },
