--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "dev": "tsx watch --env-file .env src/http/server.ts",
     "seed": "tsx --env-file .env src/db/seed.ts",
-    "format": "biome format src --write"
+    "format": "biome format src --write",
+    "pretest": "npm run db:migrate:test",
+    "pretest:watch": "npm run db:migrate:test",
+    "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
+    "test": "dotenv -e .env.test -- vitest run",
+    "test:watch": "dotenv -e .env.test -- vitest"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +19,11 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@types/node": "22.2.0",
+    "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.25.0",
     "tsx": "4.17.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vitest": "^2.1.2"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
